# Crazyswarm3D

./: README.md  frames_2025-09-14_23.30.18.gv  frames_2025-09-17_23.24.53.gv
src/: _README
src/crazyflie-firmware/: COLCON_IGNORE  cffirmware_setup.py
src/crazyswarm2/crazyflie/config/: crazyflies.yaml
src/crazyswarm2/crazyflie_py/crazyflie_py/: crazyflie.py
src/crazyswarm2/crazyflie_sim/crazyflie_sim/: crazyflie_server.py  crazyflie_sil.py
src/crazyswarm2/crazyflie_sim/crazyflie_sim/backend/: neuralswarm.py
src/gaden/: .gitignore  Changelog.md  GADEN_tutorial.md  README.md
src/gaden/gaden_common/include/gaden_common/: GadenVersion.h  Logging.h  ReadEnvironment.h  Time.hpp  Vector3.h  Vector_conversions.h
src/gaden/gaden_environment/include/environment/: environment.h
src/gaden/gaden_environment/src/: environment.cpp
src/gaden/gaden_filament_simulator/: CMakeLists.txt
src/gaden/gaden_filament_simulator/include/filament_simulator/: filament.h  filament_simulator.h
src/gaden/gaden_filament_simulator/src/: filament.cpp  filament_simulator.cpp
src/gaden/gaden_player/src/: simulation_player.cpp  simulation_player.h
src/gaden/gaden_preprocessing/: CMakeLists.txt  package.xml
src/gaden/gaden_preprocessing/src/: Triangle.hpp  TriangleBoxIntersection.hpp  preprocessing.cpp  preprocessing.hpp
src/gaden/simulated_anemometer/src/: fake_anemometer.cpp
src/gaden/simulated_gas_sensor/src/: fake_gas_sensor.cpp
src/gaden/simulated_tdlas/include/: simulated_tdlas.h
src/gaden/simulated_tdlas/src/: simulated_tdlas.cpp
src/gaden/test_env/: CMakeLists.txt  package.xml
src/gaden/test_env/launch/: GSL_GADEN_player.py  gaden.rviz  gaden_player_launch.py  gaden_preproc_launch.py  gaden_sim_launch.py  main_simbot_launch.py
src/gaden/test_env/navigation_config/: nav2_launch.py
src/gaden/test_env/scenarios/10x6_central_obstacle/params/: gaden_params.yaml
src/gaden/test_env/scenarios/10x6_empty_room/params/: GSL_gaden_params.yaml  gaden_params.yaml  preproc_params.yaml
src/gaden/test_env/scenarios/10x6_empty_room/simulations/: sim1.yaml
src/gaden/utils/OccupancyGridToSTL/src/: OccupancyGridToSTL.cpp
src/gaden/utils/decompress/src/: toASCII.cpp
src/gaden_simulation_interfaces/: CMakeLists.txt  package.xml
src/gaden_simulation_interfaces/msg/: Bout.msg  MapMSG.msg  StampedPosID.msg  ValPos.msg  ValPosStamped.msg
src/gaden_simulation_interfaces/srv/: GetForces.srv  GetForcesNew.srv  GetValue.srv
src/gaden_simulation_p/: CMakeLists.txt  LICENSE  package.xml  setup.cfg
src/gaden_simulation_p/config/: allCrazyflies.yaml  cfrobot.yaml  crazyflieTypes.yaml  crazyflies.yaml
src/gaden_simulation_p/gaden_simulation_p/: APF_1_1_agent.py  APF_1_1_env.py  clock.py
src/gaden_simulation_p/launch/: APF_1_1.py  GSL_hover_swarm.py
src/gaden_simulation_p/scripts/: APF_1_1_agent  APF_1_1_env  clock
