<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gaden_simulation_p</name>
  <version>0.0.0</version>
  <description>This package manages launch and control logic for a multi-robot gas dispersion simulation using Crazyswarm2 for swarm coordination and GADEN for environmental gas modeling.</description>
  <maintainer email="qassimgazi06@gmail.com">qas</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>                     <!-- Needed to generate msg dependencies -->
  <build_depend>geometry_msgs</build_depend>                <!-- Needed for message dependencies -->
  <build_depend>visualization_msgs</build_depend>           <!-- Message dependencies if used in .msg/.srv -->
  <build_depend>std_srvs</build_depend>                     <!-- Service dependencies -->
  <build_depend>builtin_interfaces</build_depend>           <!-- Standard message/time interfaces -->
  <build_depend>tf2_ros</build_depend>                      <!-- If used in interfaces or build scripts -->
  <build_depend>olfaction_msgs</build_depend>               <!-- If your msgs/srvs depend on this -->
  <build_depend>launch</build_depend>                       <!-- Needed if you have launch files to process -->
  <build_depend>launch_ros</build_depend>                   <!-- ROS 2 launch extensions -->
  
  <exec_depend>rclpy</exec_depend>                          <!-- Python client library -->
  <exec_depend>std_msgs</exec_depend>                       <!-- Message runtime -->
  <exec_depend>geometry_msgs</exec_depend>                  <!-- Message runtime -->
  <exec_depend>visualization_msgs</exec_depend>             <!-- Message runtime -->
  <exec_depend>std_srvs</exec_depend>                       <!-- Service runtime -->
  <exec_depend>builtin_interfaces</exec_depend>             <!-- Message runtime -->
  <exec_depend>tf2_ros</exec_depend>                        <!-- Runtime for TF2 -->
  <exec_depend>olfaction_msgs</exec_depend>                 <!-- Runtime for custom msgs --> 
  <exec_depend>launch</exec_depend>                         <!-- Launch framework runtime -->
  <exec_depend>launch_ros</exec_depend>                     <!-- ROS 2 launch runtime -->
  <exec_depend>test_env</exec_depend>                       <!-- Runtime env for tests, if relevant -->
  <exec_depend>crazyflie</exec_depend>          	    <!-- For crazyflie_server (real) -->
  <exec_depend>crazyflie_sim</exec_depend>      	    <!-- For crazyflie_server.py (sim) -->
  <exec_depend>crazyflie_py</exec_depend>		    <!-- For crazyflie.py (sim) -->
  <exec_depend>simulated_gas_sensor</exec_depend> 	    <!-- For MOX sensor nodes in APF_1_1.py -->
  <exec_depend>gaden_simulation_interfaces</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
